redis-master-old.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    sb-instanceid-redis: redis
    sb-instanceid-sentinel: sentinel
    servicebroker: sb-instanceid-redis
  name: sb-instanceid-redisbt
  #name: sb-instanceid-redisboot
spec:
  containers:
    - name: master
      image: http://redis-image-place-holder/redis-openshift-orchestration
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 6379
      resources:
        limits:
          cpu: "0.1"
      volumeMounts:
        - mountPath: /redis-master-data
          name: data
    - name: sentinel
      image: http://redis-image-place-holder/redis-openshift-orchestration
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 26379
  volumes:
    - name: data
      emptyDir: {}
