cassandra-boot-old.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: sb-instanceid-cassandra
  name: sb-instanceid-cssndr
spec:
  containers:
  - args:
    - /run.sh
    resources:
      limits:
        cpu: "0.1"
    image: http://cassandra-image-place-holder/cassandra-openshift-orchestration
    imagePullPolicy: IfNotPresent
    name: sb-instanceid-cssndr
    ports:
    - name: cql
      containerPort: 9042
    - name: thrift
      containerPort: 9160
    volumeMounts:
    - name: data
      mountPath: /cassandra_data
  volumes:
    - name: data
      emptyDir: {}


---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sb-instanceid-cassandra
  name: sb-instanceid-cssndr
spec:
  ports:
    - port: 9042
  selector:
    app: sb-instanceid-cassandra

#---
#
##Route to client
#apiVersion: v1
#kind: Route
#metadata:
#  name: sb-instanceid-cssndr
#spec:
#  host: sb-instanceid-cassandra.endpoint-postfix-place-holder
#  to:
#    kind: Service
#    name: sb-instanceid-cssndr
