cassandra-boot.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: sb-instanceid-cassandra-0
  name: sb-instanceid-cssndr0
spec:
  ports:
  - name: cql
    port: 9042
  - name: thrift
    port: 9160
  selector:
    app: sb-instanceid-cassandra-0

#---
#
##Route to client
#apiVersion: v1
#kind: Route
#metadata:
#  name: sb-instanceid-cssndr
#spec:
#  host: sb-instanceid-cassandra.endpoint-postfix-place-holder
#  to:
#    kind: Service
#    name: sb-instanceid-cssndr
