cassandra-ha.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: sb-instanceid-cassandra
  name: sb-instanceid-cssndr
spec:
  ports:
  - name: cql
    port: 9042
  - name: thrift
    port: 9160
  selector:
    app: sb-instanceid-cassandra
