etcd-outer-ha.yaml

apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-etcd1
spec:
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  - name: server
    port: 2380
    protocol: TCP
    targetPort: 2380
  selector:
    servicebroker_etcd_node: instanceid-etcd1

---

apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-etcd2
spec:
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  - name: server
    port: 2380
    protocol: TCP
    targetPort: 2380
  selector:
    servicebroker_etcd_node: instanceid-etcd2

---

apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-etcd3
spec:
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  - name: server
    port: 2380
    protocol: TCP
    targetPort: 2380
  selector:
    servicebroker_etcd_node: instanceid-etcd3
