kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-kafka
  labels:
    service-broker: sb-instanceid-kafka
spec:
  ports:
  - port: 9092
    name: kafka-port
    targetPort: 9092
    protocol: TCP
  selector:
    sb-instanceid-kafka: kafka
