mongo-pvc.yaml
#3 mongodb instances consist a replica set : "mongo-instanceid-replset"
apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-mongo-0
  labels:
    name: sb-instanceid-mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongo-svc-port
  selector:
    name: sb-instanceid-mongo0
---
apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-mongo-1
  labels:
    name: sb-instanceid-mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongo-svc-port
  selector:
    name: sb-instanceid-mongo1
---
apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-mongo-2
  labels:
    name: sb-instanceid-mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongo-svc-port
  selector:
    name: sb-instanceid-mongo2
