redis-more.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    servicebroker: sb-instanceid-redis
  name: sb-instanceid-redis
spec:
  ports:
    - port: 26379
      targetPort: 26379
  selector:
    sb-instanceid-redis-sentinel: sentinel
