storm-nimbus.yaml
apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-stormnb
spec:
  selector:
    sb-instanceid-storm: nimbus
  ports:
  - name: storm-nimbus-port
    protocol: TCP
    port: 6627
