zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-zk
spec:
  ports:
    - name: client
      port: 2181
  selector:
    service-broker: sb-instanceid-zk
---
apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-zk-1
spec:
  ports:
    - name: client
      port: 2181
    - name: followers
      port: 2888
    - name: election
      port: 3888
  selector:
    service-broker: sb-instanceid-zk
    sb-instanceid-zk: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-zk-2
spec:
  ports:
    - name: client
      port: 2181
    - name: followers
      port: 2888
    - name: election
      port: 3888
  selector:
    service-broker: sb-instanceid-zk
    sb-instanceid-zk: "2"
---
apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-zk-3
spec:
  ports:
    - name: client
      port: 2181
    - name: followers
      port: 2888
    - name: election
      port: 3888
  selector:
    service-broker: sb-instanceid-zk
    sb-instanceid-zk: "3"
