etcd.yaml
#需要替换intanceid 实例的具体名字
#需要替换#ETCDROOTPASSWORD# etcd管理员的密码

apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-etcd
spec:
  ports:
  - name: etcd-client-port
    port: 2379
    protocol: TCP
    targetPort: 2379
  selector:
    servicebroker: instanceid-etcd

---

#Route to client
apiVersion: v1
kind: Route
metadata:
  name: sb-instanceid-etcd
spec:
  host: sb-instanceid-etcd.endpoint-postfix-place-holder
  port:
    targetPort: etcd-client-port
  to:
    kind: Service
    name: sb-instanceid-etcd

---

apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-etcd1
spec:
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  - name: server
    port: 2380
    protocol: TCP
    targetPort: 2380
  selector:
    servicebroker_etcd_node: instanceid-etcd1

---

apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-etcd2
spec:
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  - name: server
    port: 2380
    protocol: TCP
    targetPort: 2380
  selector:
    servicebroker_etcd_node: instanceid-etcd2

---

apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-etcd3
spec:
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  - name: server
    port: 2380
    protocol: TCP
    targetPort: 2380
  selector:
    servicebroker_etcd_node: instanceid-etcd3

---

apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-etcd0
spec:
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: 2379
  - name: server
    port: 2380
    protocol: TCP
    targetPort: 2380
  selector:
    servicebroker_etcd_node: instanceid-etcd0
