kettle-old.yaml

apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: sb-instanceid-kettle
  name: sb-instanceid-kettle
spec:
  replicas: 1
  selector:
    app: sb-instanceid-kettle
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        app: sb-instanceid-kettle
    spec:
      containers:
      - image: http://kettle-image-place-holder/kettle-openshift-orchestration
        imagePullPolicy: Always
        name: sb-instanceid-kettle
        ports:
        - containerPort: 8181
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  test: false
  triggers:
  - type: ConfigChange
---
apiVersion: v1
kind: Route
metadata:
  name: sb-instanceid-kettle
  labels:
    servicebroker: sb-instanceid-kettle
spec:
  host: sb-instanceid-kettle.endpoint-postfix-place-holder
  port:
    targetPort: web
  to:
    kind: Service
    name: sb-instanceid-kettle
---
apiVersion: v1
kind: Service
metadata:
  labels:
    servicebroker: sb-instanceid-kettle
  name: sb-instanceid-kettle
spec:
  ports:
  - port: 8181
    name: web
    protocol: TCP
  selector:
    servicebroker: sb-instanceid-kettle
  sessionAffinity: None
  type: ClusterIP
