kettle.yaml
apiVersion: v1
kind: Route
metadata:
  name: sb-instanceid-kettle
  labels:
    servicebroker: sb-instanceid-kettle
spec:
  host: sb-instanceid-kettle.endpoint-postfix-place-holder
  port:
    targetPort: web
  to:
    kind: Service
    name: sb-instanceid-kettle
---
apiVersion: v1
kind: Service
metadata:
  labels:
    servicebroker: sb-instanceid-kettle
  name: sb-instanceid-kettle
spec:
  ports:
  - port: 8080
    name: web
    protocol: TCP
  selector:
    servicebroker: sb-instanceid-kettle
  sessionAffinity: None
  type: ClusterIP
