nifi.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: sb-instanceid-nifi
  labels:
    servicebroker: sb-instanceid-nifi
spec:
  host: sb-instanceid-nifi.endpoint-postfix-place-holder
  port:
    targetPort: web
  to:
    kind: Service
    name: sb-instanceid-nifi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    servicebroker: sb-instanceid-nifi
  name: sb-instanceid-nifi
spec:
  ports:
  - port: 8080
    name: web
  selector:
    servicebroker: sb-instanceid-nifi
