pyspider.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: sb-instanceid-pyspdr
  name: sb-instanceid-pyspdr
spec:
  host: sb-instanceid-pyspdr.endpoint-postfix-place-holder
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: sb-instanceid-pyspdr
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sb-instanceid-pyspdr
  name: sb-instanceid-pyspdr
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: sb-instanceid-pyspdr
  sessionAffinity: None
  type: ClusterIP
