rabbitmq.yaml
#Route for admin
apiVersion: v1
kind: Route
metadata:
  name: sb-instanceid-rbbtmqa
  labels:
    servicebroker: sb-instanceid-rabbitmq-admin
spec:
  host: sb-instanceid-rabbitmq-admin.endpoint-postfix-place-holder
  port:
    targetPort: admin
  to:
    kind: Service
    name: sb-instanceid-rbbtmq
---
apiVersion: v1
kind: Service
metadata:
  labels:
    servicebroker: sb-instanceid-rabbitmq
  name: sb-instanceid-rbbtmq
spec:
  ports:
  - port: 5672
    name: mq
  - port: 15672
    name: admin
  selector:
    servicebroker: sb-instanceid-rabbitmq
