spark-master.yaml

kind: Service
apiVersion: v1
metadata:
  name: sb-instanceid-sparkms
spec:
  ports:
    - port: 7077
      targetPort: 7077
  selector:
    servicebroker: sb-instanceid-spark-master

---

apiVersion: v1
kind: Route
metadata:
  name: sb-instanceid-sparkwb
spec:
  host: sb-instanceid-spark-web-servicebroker.endpoint-postfix-place-holder
  to:
    kind: Service
    name: sb-instanceid-sparkwb

---

kind: Service
apiVersion: v1
metadata:
  name: sb-instanceid-sparkwb
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    servicebroker: sb-instanceid-spark-master
