spark-zeppelin.yaml

kind: Service
apiVersion: v1
metadata:
  name: sb-instanceid-sparkzp
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    servicebroker: sb-instanceid-spark-zepplin

---

apiVersion: v1
kind: Route
metadata:
  name: sb-instanceid-sparkzp
spec:
  host: sb-instanceid-spark-zeppelin-servicebroker.endpoint-postfix-place-holder
  to:
    kind: Service
    name: sb-instanceid-sparkzp
