storm-ui-supervisor.yaml

apiVersion: v1
kind: Service
metadata:
  name: sb-instanceid-stormui
spec:
  selector:
    sb-instanceid-storm: ui
  ports:
  - name: storm-ui-port
    port: 8080
    protocol: TCP
    targetPort: 8080

---

apiVersion: v1
kind: Route
metadata:
  name: sb-instanceid-stormui
spec:
  host: sb-instanceid-stormui.endpoint-postfix-place-holder
  port:
    targetPort: storm-ui-port
  to:
    kind: Service
    name: sb-instanceid-stormui
