tensorflow.yaml
apiVersion: v1
kind: Route
metadata:
  name: sb-instanceid-tnsrflw
  labels:
    servicebroker: sb-instanceid-tensorflow
spec:
  host: sb-instanceid-tensorflow.endpoint-postfix-place-holder
  port:
    targetPort: web
  to:
    kind: Service
    name: sb-instanceid-tnsrflw
---
apiVersion: v1
kind: Service
metadata:
  labels:
    servicebroker: sb-instanceid-tensorflow
  name: sb-instanceid-tnsrflw
spec:
  ports:
  - port: 8888
    name: web
  selector:
    servicebroker: sb-instanceid-tensorflow
